--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -1,35 +1,41 @@
 name: Firebase Hosting Deploy
 
+# Desencadenar el flujo de trabajo en push a la rama principal
 on:
   push:
     branches:
-      - develop  # o la rama que prefieras
+      - develop
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build_and_deploy:
+    runs-on: ubuntu-latest # Usar una máquina Ubuntu para el entorno de GitHub Actions
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      # Clonar el repositorio
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      # Configurar Node.js (Angular requiere Node.js)
+      - uses: actions/setup-node@v4
         with:
-          node-version: '14'  # ajusta si usas una versión diferente
+          node-version: '20' # Usa una versión compatible con tu proyecto Angular (puedes verificarla en package.json)
+          cache: 'npm' # Cache para acelerar la instalación de dependencias
 
-      - name: Install dependencies
-        run: |
-          npm install
+      # Instalar dependencias del proyecto
+      - name: Install Dependencies
+        run: npm ci # npm ci es más rápido y fiable para CI/CD que npm install
 
-      - name: Build the app
-        run: |
-          npm run start
+      # Construir el proyecto Angular
+      - name: Build Angular Project
+        run: npm run build -- --configuration production # Construye con configuración de producción
+        env:
+          NODE_OPTIONS: --max-old-space-size=4096 # Opcional: Aumenta la memoria para builds grandes
 
+      # Instalar Firebase CLI
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      # Desplegar a Firebase Hosting
       - name: Deploy to Firebase
-        uses: wzieba/firebase-action@v2.2.0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARQUITECH }}'
-          channelId: live
-          projectId: arquitech
+        run: firebase deploy --only hosting --non-interactive
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} # Token de Firebase para autenticación
 
