--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^19.2.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "html2canvas": "^1.4.1",
     "json-server": "^0.17.4",
+    "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
