--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "html2canvas": "^1.4.1",
     "json-server": "^0.17.4",
-    "jspdf": "^3.0.1",
+    "jspdf": "^2.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,7 +31,9 @@
     "@angular-devkit/build-angular": "^19.2.11",
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
